--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -3,10 +3,249 @@
 user,
 nav="cookbook",
 title =  "食美特，不一样的生活"
-)(css="/assets/css/template/china.css") {
+)(css="/assets/css/template/cookbook.css") {
 
-<div class="container clearfix" id="china">
+<div class="container clearfix" id="cookbook">
 
+    <div class="main-box clearfix">
+
+        <div class="flash fl ui-switchable" id="J_flash">
+            <div class="scrollable">
+
+                <div class="items">
+                  <div class="item">
+                      <a><img width="685" height="250"></a>
+                  </div>
+                    <div class="item">
+                        <a><img width="685" height="250"></a>
+                    </div>
+                    <div class="item">
+                        <a><img width="685" height="250"></a>
+                    </div>
+                    <div class="item">
+                        <a><img width="685" height="250"></a>
+                    </div>
+                    <div class="item">
+                        <a><img width="685" height="250"></a>
+                    </div>
+
+
+                </div>
+
+
+            </div>
+            <ul class="navi clearfix">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <!--  switchable  slide end-->
+        <div class="bulletin  fr clearfix">
+            <div class="bulletin-tips">
+
+                <div class="tag-wrap clearfix">
+
+                    <a href="" target="_blank" class="special">早餐</a>
+                    <a href="" target="_blank">午餐</a>
+                    <a href="" target="_blank" class="special">晚餐</a>
+                    <a href="" target="_blank">下午茶</a>
+                    <a href="" target="_blank">孕妇</a>
+                    <a href="" target="_blank">产妇</a>
+                    <a href="" target="_blank" class="special">宝宝</a>
+                    <a href="" target="_blank">上班族</a>
+                    <a href="" target="_blank">美容</a>
+                    <a href="" target="_blank">减肥</a>
+                    <a href="" target="_blank">延缓衰老</a>
+                    <a href="" target="_blank">清热解毒</a>
+                    <a href="" target="_blank">肢寒畏冷</a>
+                    <a href="" target="_blank">益智补脑</a>
+                    <a href="" target="_blank">补虚养身</a>
+                </div>
+            </div>
+
+
+
+        </div>
+
+
+    </div>
+
+
+    <!-- 美食主题推荐-->
+    <div class="category clearfix" id="J_seasonShicai">
+
+        <div class="hd clearfix">
+            <h2 class="fl"><a href="#">应季食材</a></h2>
+            <ul class="tabs">
+                <li class="active"></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="switch-content clearfix">
+         <div class="panel">
+             <div class="item ">
+                 <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
+                     <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+                 </a>
+             </div>
+             <div class="item ">
+                 <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+                 </a>
+             </div>
+             <div class="item ">
+                 <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
+                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
+                 </a>
+
+             </div>
+             <div class="item ">
+                 <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
+                     <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+                 </a>
+             </div>
+             <div class="item ">
+                 <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+                 </a>
+             </div>
+             <div class="item last">
+                 <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
+                     <img  width="150" height="150" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
+                 </a>
+
+             </div>
+         </div>
+            <div class="panel">
+
+                <div class="item ">
+                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+                    </a>
+                </div>
+                <div class="item ">
+                    <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
+                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
+                    </a>
+
+                </div>
+                <div class="item ">
+                    <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
+                        <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+                    </a>
+                </div>
+                <div class="item ">
+                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+                    </a>
+                </div>
+                <div class="item ">
+                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+                    </a>
+                </div>
+                <div class="item last">
+                    <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
+                        <img  width="150" height="150" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 食材主题推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href="#">应季私房菜</a></h2>
+            <a class="fr" href="#">更多&gt;&gt;</a>
+        </div>
+        <div class="group clearfix">
+
+            <div class="item ">
+                <div class="pic">
+                    <a href="/theme/18" title="红酒俏佳人"  target="_blank">
+                        <img class="b-img" width="210" height="210" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+                    </a>
+                 </div>
+                <div class="pic-info">
+                        sssss
+                  </div>
+                <div class="num">
+                    <div class="view-num">1</div>
+                    <div class="reply-num">1</div>
+                    <div class="like-state">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                            <i class="ico-likes" title="喜欢"></i>
+                        </a>
+                        <div class="like-num">
+                            <dl class="J_scrollUp" style="top: 0px;">
+                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd>+1</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <h3 class="ofh">
+                    <a href="/theme/18" target="_blank">红酒俏佳人</a>
+                </h3>
+            </div>
+
+            <div class="item ">
+                <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
+
+
+                    <img class="b-img" width="210" height="210" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
+
+
+
+
+                </a>
+                <h3 class="ofh">
+                    <a href="/theme/58" target="_blank">出游必备美食</a>
+                </h3>
+
+
+            </div>
+
+            <div class="item ">
+                <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
+
+
+                    <img class="b-img" width="210" height="210" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
+
+
+
+
+                </a>
+                <h3 class="ofh">
+                    <a href="/theme/53" target="_blank">与美食约会</a>
+                </h3>
+
+
+            </div>
+
+            <div class="item last">
+                <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
+
+
+                    <img class="b-img" width="210" height="210" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
+
+
+
+                </a>
+                <h3 class="ofh">
+                    <a href="/theme/32" target="_blank">吃够粗粮，保护我们的“小心肝”</a>
+                </h3>
+
+
+            </div>
+
+        </div>
+    </div>
 
 
 
