--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -96,10 +96,11 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>频道管理</span></a>
                     <ul>
                         <li><a href='@controllers.admin.routes.Adverts.channel("index")'>首页频道管理</a></li>
-                        <li><a href='@controllers.admin.routes.Adverts.channel("tejia")'>天天特价管理</a></li>
-                        <li><a href='@controllers.admin.routes.Adverts.channel("checkIn")'>签到推荐管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("tejia")'>今天值得买管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("themes")'>主题频道管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("forum")'>讨论吧频道管理</a></li>
-                        <li><a href='@controllers.admin.routes.Adverts.channel("miss")'>主题频道管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("checkIn")'>签到推荐管理</a></li>
+
                     </ul>
                 </li>
 
