--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -42,11 +42,11 @@ title = " 美食街_食美特，爱美食爱生活"
         </ul>
     </div>
     <!--  switchable  slide end-->
-    <div class="bulletin r5 fr clearfix">
+    <div class="bulletin  fr clearfix">
          <div class="bulletin-tips">
                <h3 class="mt15 mb10">用快乐的心情</h3>
                 <h3 class="mb15">收录生活的正能量</h3>
-               <p class="edit mb10">{ 我就是主编 }</p>
+               <p class="edit mb10">{ 我是主编 }</p>
                <p><a class="create-theme" href="@controllers.routes.Themes.edit(0)"> 创作主题</a> </p>
              <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
          </div>
