--- a/public/assets/css/template/site.css
+++ b/public/assets/css/template/site.css
@@ -439,7 +439,17 @@
     height: 24px;
 }
 .post-item .title{
-   text-align: center;
+   text-align: left;
+}
+.post-item .title a{
+    font-size: 16px;
+    line-height: 1.1;
+    text-align: left;
+    color: #666;
+    font-weight: bold;
+}
+.post-item .title a:hover{
+    text-decoration: none;
 }
 
 
