--- a/public/assets/css/template/themes.css
+++ b/public/assets/css/template/themes.css
@@ -118,7 +118,7 @@
 }
 
 
-/* sort  */
+/* sort for gallery page  */
 .filter-wrap {
     margin: 20px 0;
     padding: 0;
@@ -185,7 +185,7 @@
     top: -5px;
     background-color: #fff
 }
-
+/* end */
 .category {width:950px;background:#fff;padding:15px; margin: 0 auto 20px;}
 .category .group{overflow: hidden;}
 .category .hd{ margin-bottom:6px;overflow:hidden;padding: 0 10px}
