adjust sifangcai style

--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -170,10 +170,9 @@ title =  "食美特，不一样的生活"
                     <a href="/theme/18" title="红酒俏佳人"  target="_blank">
                         <img class="b-img" width="210" height="210" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
                     </a>
+                    <strong><span>美容 延缓衰老 </span> </strong>
                  </div>
-                <div class="pic-info">
-                        sssss
-                  </div>
+
                 <div class="num">
                     <div class="view-num">1</div>
                     <div class="reply-num">1</div>
