--- a/public/assets/css/template/cookbook.css
+++ b/public/assets/css/template/cookbook.css
@@ -123,27 +123,48 @@
 
 .category .group .item {
     float: left;
-    *display: inline;
     width: 210px;
     margin-right: 30px;
     padding: 0 0 10px 0;
     background-color: #fff;
+    position: relative;
     overflow: hidden
 }
 
 .category  .item  .pic {
+    margin-bottom: 10px;
     display: block;
     width: 210px;
     height: 210px;
     float: left;
+    position: relative;
     overflow: hidden
 }
 
-.category  .item  a.pic:hover {
-    text-decoration: none
+.category .item .pic strong{
+    display: inline-block;
+    vertical-align: top;
+    height: 38px;
+    position: absolute;
+    right: 0px;
+    top: 12px;
 }
+.category .item .pic strong span{
+    display: inline-block;
+    vertical-align: top;
+    height: 32px;
+    padding: 0px 12px;
+    background: #60a531;
+    line-height: 32px;
+    color: #fff;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.5);
+    font-size: 14px;
+}
+
+
 .category  .item  h3 {
-    padding-top: 15px;
+    padding-top: 10px;
+    text-align: center;
     font-size: 16px;
     line-height: 1.1;
     color: #666
@@ -158,7 +179,7 @@
     position: relative;
     color: #000;
     background-color: #fff;
-    margin: 10px auto;
+    margin: 0px auto;
     width: 160px;
     height: 24px;
     line-height: 24px;
