adjust sites.scala.html styles

--- a/app/views/pages/sites.scala.html
+++ b/app/views/pages/sites.scala.html
@@ -3,9 +3,142 @@
 user,
 nav="site",
 title =  "食美特，爱美食爱生活"
-)(css="/assets/css/template/china.css") {
+)(css="/assets/css/template/sites.css") {
 
-<div class="container clearfix" id="china">
+<div class="container clearfix" id="sites">
+
+    <div class="main-box clearfix">
+
+        <div class="flash fl ui-switchable" id="J_themeFlash">
+            <div class="scrollable">
+
+                <div class="items">
+
+
+
+
+                </div>
+
+
+            </div>
+            <ul class="navi clearfix">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <!--  switchable  slide end-->
+        <div class="bulletin  fr clearfix">
+            <div class="bulletin-tips">
+                <h3 class="mt15 mb10">用快乐的心情</h3>
+                <h3 class="mb15">收录生活的正能量</h3>
+                <p class="edit mb10">{ 我是主编 }</p>
+                <p><a class="create-theme" href="/theme/edit"> 创作主题</a> </p>
+                <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
+            </div>
+
+
+
+        </div>
+
+
+    </div>
+
+
+    <!-- 小站推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href="">小站推荐</a></h2>
+            <a class="fr" href="">更多&gt;&gt;</a>
+        </div>
+        <div class="group clearfix">
+            <div class="item">
+                <div class="pic">
+                    <a><img src="/images/temp/presell1.jpg" width="150" height="150" alt=""> </a>
+                </div>
+                <dl  class="info">
+                    <dt class="title"><a>私房菜</a> </dt>
+                    <dt class="num"> 66 居民 </dt>
+                    <dt class="intro"> 私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜 </dt>
+                </dl>
+            </div>
+            <div class="item last">
+                <div class="pic">
+                    <a><img src="/images/temp/presell1.jpg" width="150" height="150" alt=""> </a>
+                </div>
+                <dl  class="info">
+                    <dt class="title"><a>私房菜</a> </dt>
+                    <dt class="num"> 66 居民 </dt>
+                    <dt class="intro"> 私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜私房菜 </dt>
+                </dl>
+            </div>
+
+
+        </div>
+    </div>
+
+    <!-- 帖子推荐-->
+    <div class="category clearfix">
+        <div class="hd clearfix">
+            <h2 class="fl"><a href="">帖子推荐</a></h2>
+            <a class="fr" href="">更多&gt;&gt;</a>
+        </div>
+        <div class="posts clearfix">
+              <div class="item">
+                  <div class="pic">
+                      <a><img src="/images/temp/sites1.jpg" width="430"> </a>
+                  </div>
+
+                  <div class="num">
+                      <div class="view-num">1</div>
+                      <div class="reply-num">1</div>
+                      <div class="like-state">
+                          <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                              <i class="ico-likes" title="喜欢"></i>
+                          </a>
+                          <div class="like-num">
+                              <dl class="J_scrollUp" style="top: 0px;">
+                                  <dd class="J_FavorNum" data-val="1">1</dd>
+                                  <dd>+1</dd>
+                              </dl>
+                          </div>
+                      </div>
+                  </div>
+                      <h3 class=" ofh">
+                            红酒俏佳人
+                      </h3>
+                  <div class="intro">
+                     首先附一张改变好的图片让大家感受一下大家已经看到了，此图我们已经成功的把“中国联通”修改为“想去logo”，非常的...
+                  </div>
+                  </div>
+            <div class="item last">
+                <div class="pic">
+                    <a><img src="/images/temp/sites1.jpg" width="430"> </a>
+                </div>
+
+                <div class="num">
+                    <div class="view-num">1</div>
+                    <div class="reply-num">1</div>
+                    <div class="like-state">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                            <i class="ico-likes" title="喜欢"></i>
+                        </a>
+                        <div class="like-num">
+                            <dl class="J_scrollUp" style="top: 0px;">
+                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd>+1</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <h3 class=" ofh">
+                    红酒俏佳人
+                </h3>
+            </div>
+        </div>
+    </div>
 
 
 
