add postList.scala.html ,siteList.scala.html style

--- a/app/views/pages/postList.scala.html
+++ b/app/views/pages/postList.scala.html
@@ -5,7 +5,7 @@ nav="site",
 title =  "食美特，爱美食爱生活"
 )(css="/assets/css/template/sites.css") {
 
-<div class="container clearfix" id="themes">
+<div class="container clearfix" id="sites">
 
     <div class="main-box clearfix">
 
@@ -46,36 +46,82 @@ title =  "食美特，爱美食爱生活"
 
     </div>
 
+    <div class="filter-wrap clearfix">
+        <div class="cate">
+            <h2><a>所有</a></h2> <h2><a>生活</a></h2> <h2><a>品牌</a></h2> <h2><a>其他</a></h2>
+        </div>
 
+        <div class="filter">
+            <a href="#" class=" current"><span>最新</span></a>
+            <a href="#"><span>最热</span></a>
+        </div>
+        <i></i>
+    </div>
     <!-- 小站推荐-->
     <div class="category clearfix">
-        <div class="hd clearfix">
-            <h2 class="fl"><a href="">小站</a></h2>
-            <a class="fr" href="">更多&gt;&gt;</a>
-        </div>
-        <div class="group clearfix">
 
+        <div class="posts clearfix">
+            <div class="item">
+                <div class="pic">
+                    <a><img src="/images/temp/sites1.jpg" width="430"> </a>
+                </div>
+
+                <div class="num">
+                    <div class="view-num">1</div>
+                    <div class="reply-num">1</div>
+                    <div class="like-state">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                            <i class="ico-likes" title="喜欢"></i>
+                        </a>
+                        <div class="like-num">
+                            <dl class="J_scrollUp" style="top: 0px;">
+                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd>+1</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <h3 class=" ofh">
+                    红酒俏佳人
+                </h3>
+                <div class="intro">
+                    首先附一张改变好的图片让大家感受一下大家已经看到了，此图我们已经成功的把“中国联通”修改为“想去logo”，非常的...
+                </div>
+            </div>
+            <div class="item last">
+                <div class="pic">
+                    <a><img src="/images/temp/sites1.jpg" width="430"> </a>
+                </div>
+
+                <div class="num">
+                    <div class="view-num">1</div>
+                    <div class="reply-num">1</div>
+                    <div class="like-state">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                            <i class="ico-likes" title="喜欢"></i>
+                        </a>
+                        <div class="like-num">
+                            <dl class="J_scrollUp" style="top: 0px;">
+                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd>+1</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <h3 class=" ofh">
+                    红酒俏佳人
+                </h3>
+            </div>
         </div>
+
     </div>
-
-    <!-- 帖子推荐-->
-    <div class="category clearfix">
-        <div class="hd clearfix">
-            <h2 class="fl"><a href="">帖子</a></h2>
-            <a class="fr" href="">更多&gt;&gt;</a>
-        </div>
-        <div class="group clearfix">
-
-        </div>
-    </div>
-
 
 
 
 
 </div>
 
-        }{
+}{
 
 <script type="text/javascript">
     seajs.use(['smeite/site/sites','smeite/site/favor'])
