--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -56,7 +56,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
             </li>
 
         </ul>
-			<span class="pos-l-txt gc6">返回： <a href='@controllers.routes.Pages.themes'>主题</a><span class="ml5 mr5">/</span> <a href='@controllers.routes.Pages.gallery(theme.cid,1,1)'>@models.Cate(theme.cid)</a> </span>
+			<span class="pos-l-txt gc6">返回： <a href='@controllers.routes.Pages.themes'>主题</a><span class="ml5 mr5">/</span> <a href='@controllers.routes.Pages.themeList(theme.cid,1,1)'>@models.Cate(theme.cid)</a> </span>
     </div>
 
 </div>
