--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -62,8 +62,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 美食主题推荐-->
      <div class="category clearfix">
     <div class="hd clearfix">
-        <h2 class="fl"><a href='@controllers.routes.Pages.gallery(0,1,1)'>美食</a></h2>
-        <a class="fr" href='@controllers.routes.Pages.gallery(0,1,1)'>更多&gt;&gt;</a>
+        <h2 class="fl"><a href='@controllers.routes.Pages.themeList(0,1,1)'>美食</a></h2>
+        <a class="fr" href='@controllers.routes.Pages.themeList(0,1,1)'>更多&gt;&gt;</a>
     </div>
     <div class="group clearfix">
         @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-meishiThemes.view.zipWithIndex){
@@ -97,8 +97,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 食材主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(1,1,1)'>特产</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(1,1,1)'>更多&gt;&gt;</a>
+            <h2 class="fl"><a href='@controllers.routes.Pages.themeList(1,1,1)'>特产</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.themeList(1,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-techanThemes.view.zipWithIndex){
@@ -132,8 +132,8 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 居家主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.gallery(3,1,1)'>居家</a></h2>
-            <a class="fr" href='@controllers.routes.Pages.gallery(3,1,1)'>更多&gt;&gt;</a>
+            <h2 class="fl"><a href='@controllers.routes.Pages.themeList(3,1,1)'>居家</a></h2>
+            <a class="fr" href='@controllers.routes.Pages.themeList(3,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<- jujiaThemes.view.zipWithIndex){
