adjust some template style

--- a/app/views/pages/sites.scala.html
+++ b/app/views/pages/sites.scala.html
@@ -50,8 +50,8 @@ title =  "食美特，爱美食爱生活"
     <!-- 小站推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href="">小站推荐</a></h2>
-            <a class="fr" href="">更多&gt;&gt;</a>
+            <h2 class="fl"><a href="@controllers.routes.Pages.siteList(-1,1,1)">小站推荐</a></h2>
+            <a class="fr" href="@controllers.routes.Pages.siteList(-1,1,1)">更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
             <div class="item">
@@ -82,8 +82,8 @@ title =  "食美特，爱美食爱生活"
     <!-- 帖子推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href="">帖子推荐</a></h2>
-            <a class="fr" href="">更多&gt;&gt;</a>
+            <h2 class="fl"><a href="@controllers.routes.Pages.postList(-1,1,1)">帖子推荐</a></h2>
+            <a class="fr" href="@controllers.routes.Pages.postList(-1,1,1)">更多&gt;&gt;</a>
         </div>
         <div class="posts clearfix">
               <div class="item">
