--- a/app/views/pages/postList.scala.html
+++ b/app/views/pages/postList.scala.html
@@ -48,12 +48,15 @@ title =  "食美特，爱美食爱生活"
 
     <div class="filter-wrap clearfix">
         <div class="cate">
-            <h2><a>所有</a></h2> <h2><a>生活</a></h2> <h2><a>品牌</a></h2> <h2><a>其他</a></h2>
+            <h2 @if(cid == -1){class="current"} ><a href="@controllers.routes.Pages.postList(-1,1,1)">所有</a></h2>
+            <h2 @if(cid == 0){class="current"} ><a href="@controllers.routes.Pages.postList(0,1,1)">菜谱</a></h2>
+            <h2 @if(cid == 1){class="current"} ><a href="@controllers.routes.Pages.postList(1,1,1)">食材</a></h2>
+            <h2 @if(cid == 2){class="current"} ><a href="@controllers.routes.Pages.postList(2,1,1)">其他</a></h2>
         </div>
 
         <div class="filter">
-            <a href="#" class=" current"><span>最新</span></a>
-            <a href="#"><span>最热</span></a>
+            <a href="@controllers.routes.Pages.postList(cid,1,1)" @if(s == 1){class="current"}><span>最新</span></a>
+            <a href="@controllers.routes.Pages.postList(cid,2,1)" @if(s == 2){class="current"}><span>最热</span></a>
         </div>
         <i></i>
     </div>
@@ -61,59 +64,58 @@ title =  "食美特，爱美食爱生活"
     <div class="category clearfix">
 
         <div class="posts clearfix">
-            <div class="item">
+            @for( (item,i) <- page.items.view.zipWithIndex ){
+            <div class="item @if((i+1)%2 == 0){last} ">
                 <div class="pic">
-                    <a><img src="/images/temp/sites1.jpg" width="430"> </a>
+                    <a><img src="@item.pic" width="430"> </a>
                 </div>
 
                 <div class="num">
-                    <div class="view-num">1</div>
-                    <div class="reply-num">1</div>
+                    <div class="view-num">@item.viewNum</div>
+                    <div class="reply-num">@item.replyNum</div>
                     <div class="like-state">
-                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="@item.id.get">
                             <i class="ico-likes" title="喜欢"></i>
                         </a>
                         <div class="like-num">
                             <dl class="J_scrollUp" style="top: 0px;">
-                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd class="J_FavorNum" data-val="@item.loveNum">@item.loveNum</dd>
                                 <dd>+1</dd>
                             </dl>
                         </div>
                     </div>
                 </div>
                 <h3 class=" ofh">
-                    红酒俏佳人
+                    @item.title
                 </h3>
                 <div class="intro">
-                    首先附一张改变好的图片让大家感受一下大家已经看到了，此图我们已经成功的把“中国联通”修改为“想去logo”，非常的...
+
                 </div>
             </div>
-            <div class="item last">
-                <div class="pic">
-                    <a><img src="/images/temp/sites1.jpg" width="430"> </a>
-                </div>
+            }
 
-                <div class="num">
-                    <div class="view-num">1</div>
-                    <div class="reply-num">1</div>
-                    <div class="like-state">
-                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
-                            <i class="ico-likes" title="喜欢"></i>
-                        </a>
-                        <div class="like-num">
-                            <dl class="J_scrollUp" style="top: 0px;">
-                                <dd class="J_FavorNum" data-val="1">1</dd>
-                                <dd>+1</dd>
-                            </dl>
-                        </div>
-                    </div>
-                </div>
-                <h3 class=" ofh">
-                    红酒俏佳人
-                </h3>
+        </div>
+        <div class="tac mt20">
+            <div class="pagin inlineblock clearfix" id="J_Pagination">
+                @if(page.nums.length>1){
+                @page.prev.map { page =>
+                <a class="prev" href="@controllers.routes.Pages.postList(cid,s,page)">上一页</a>
+                }
+                @for(num <-page.nums){
+                @if(num==page.currentPage){
+                <span class="current">@num</span>
+                }else {
+                <a href="@controllers.routes.Pages.postList(cid,s,num)">@num</a>
+                }
+                }
+                @page.next.map { page =>
+                <a class="next" href="@controllers.routes.Pages.postList(cid,s,page)">下一页</a>
+
+                }
+
+                }
             </div>
         </div>
-
     </div>
 
 
